Temporary test normalization